k8s/kweetservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kweetservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kweetservice
  template:
    metadata:
      labels:
        app: kweetservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: kweetservice
        image: mustafa2x/kweetservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kweetservice-srv
spec:
  type: ClusterIP
  selector:
    app: kweetservice
  ports:
  - name: kweetservice
    protocol: TCP
    port: 80
    targetPort: 80
