k8s/likeservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kwetter-likeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kwetter-likeservice
  template:
    metadata:
      labels:
        app: kwetter-likeservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: kwetter-likeservice
        image: mustafa2x/likeservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kwetter-likeservice-srv
spec:
  type: ClusterIP
  selector:
    app: kwetter-likeservice
  ports:
  - name: kwetter-likeservice
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kwetter-np-likeservice-srv
spec:
  type: NodePort
  selector:
    app:  kwetter-likeservice
  ports:
    - name:  kwetter-likeservice
      protocol: TCP
      port: 80
      targetPort: 80
