k8s/userservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: userservice
        image: mustafa2x/userservice:latest
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: redis
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
  - name: userservice
    protocol: TCP
    port: 80
    targetPort: 80
